--- a/app/views/links/_new.html.erb
+++ b/app/views/links/_new.html.erb
@@ -9,5 +9,5 @@
   <%= render 'words/select', f: f, word_content: @word2_content, n: 2 %>
 
   <br/>
-  <%= f.submit "Create the link", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Create the link", class: "btn btn-default btn-lg btn-primary" %>
 <% end %>
