--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="hero-unit">
+<div class="jumbotron">
   <h1>Welcome to Openvoc!</h1>
   <p>
   Openvoc helps you create vocabulary lists,
