--- a/app/views/trains/create.html.erb
+++ b/app/views/trains/create.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Training' ) %>
 <h1>Training
   <% if @guess.nil? %>
-    <i class="icon-remove-sign"></i>
+    <i class="glyphicon-remove-sign"></i>
   <% else %>
-    <i class="icon-ok-sign"></i>
+    <i class="glyphicon-ok-sign"></i>
   <% end %>
 </h1>
 <% if @guess.nil? %>
@@ -46,9 +46,9 @@ The average user succeeds with an average of
 </p>
 
 <%= link_to "Keep decision", new_list_train_path(@list, rec: @rec, max: @max),
-  class: 'btn btn-large btn-primary' %>
+  class: 'btn btn-default btn-lg btn-primary' %>
 <%= link_to (@train.success ? "Mark as failed" : "Mark as succeeded"), list_train_toggle_success_path(@list, @train, rec: @rec, max: @max),
-  class: 'btn btn-large' %>
+  class: 'btn btn-default btn-lg' %>
 <br />
 <br />
 <%= back_to_list %>
