--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,5 +7,5 @@
   <%= f.label :name %>
   <%= f.text_field :name, value: session['name'] %>
   <br />
-  <%= f.submit "Create", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Create", class: "btn btn-default btn-lg btn-primary" %>
 <% end %>
