--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -4,16 +4,16 @@
   <%= @word.content %>,
   created by <%= @word.owner.name %>
   <% if @word.owner == current_user %>
-    <%= link_to "Destroy it", word_path(@word), class: "btn", method: :delete %>
+    <%= link_to "Destroy it", word_path(@word), class: "btn btn-default", method: :delete %>
   <% end %>
 </h2>
 <div class="row">
-  <div class="span3">
+  <div class="col-md-3">
     <h3>Links</h3>
     <div class="well">
-      <ul class="nav nav-list">
+      <ul class="navbar nav-list">
         <li <%= 'class="active"'.html_safe unless @link %>><%= link_to new_word_link_path(@word) do %>
-          <i class="icon-magnet <%= "icon_white" unless @link %>"></i>
+          <i class="glyphicon-magnet <%= "icon_white" unless @link %>"></i>
           New link
         <% end %>
         </li>
@@ -21,7 +21,7 @@
           <% unless l.id.nil? %> <!-- not registered -->
             <li <%= 'class="active"'.html_safe if @link == l %>>
             <%= link_to link_path(l) do %>
-              <i class="icon-edit <%= "icon_white" unless @link %>"></i>
+              <i class="glyphicon-edit <%= "icon_white" unless @link %>"></i>
               <%= l.word2.content %>
             <% end %>
           <% end %>
@@ -31,28 +31,28 @@
     </div>
   </div>
   <% if signed_in? %>
-    <div class="span3">
+    <div class="col-md-3">
       <h3>Lists</h3>
       <div class="well">
         <p>Add to</p>
         <%= form_for :inclusion, url: word_inclusions_path(@word) do |f| %>
           <%= f.collection_select("list_id", current_user.lists_without(@word), :id, :path, prompt: true) %>
-          <%= f.submit "Add", class: "btn btn-primary" %>
+          <%= f.submit "Add", class: "btn btn-default btn-primary" %>
         <% end %>
       </div>
     </div>
   <% end %>
   <% if signed_in? or @link %>
-    <div class="span3 <%= 'offset3' unless signed_in? %>">
+    <div class="col-md-3 <%= 'col-md-offset-3' unless signed_in? %>">
       <h3>Linking</h3>
       <div class="well">
         <% if @link %>
           <h4>Created by <%= @link.owner.name %></h4>
           <p>
-          <i class="icon-magnet"></i>
+          <i class="glyphicon-magnet"></i>
           <%= link_to @link.word2.content, word_path(@link.word2) %>
           <% if @link.owner == current_user %>
-            <%= link_to "", link_path(@link), method: :delete, class: "icon-remove" %>
+            <%= link_to "", link_path(@link), method: :delete, class: "glyphicon-remove" %>
           <% end %>
           </p>
         <% elsif signed_in? %>
@@ -62,7 +62,7 @@
             <%= render 'words/select', f: f, word_content: @word2_content, n: 2 %>
 
             <br/>
-            <%= f.submit "Create the link", class: "btn btn-large btn-primary" %>
+            <%= f.submit "Create the link", class: "btn btn-default btn-lg btn-primary" %>
           <% end %>
         <% end %>
       </div>
