--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -3,32 +3,32 @@
   <% unless @authentications.empty? and !current_user.registered? %>
     <p><strong>You can sign in to this account using:</strong></p>
     <div class="well">
-      <div class="row-fluid">
+      <div class="row">
         <ul class="thumbnails">
-          <!-- Not more than 6 so span2 is safe -->
+          <!-- Not more than 6 so col-md-2 is safe -->
           <% if current_user.registered? %>
-            <li class="span2">
+            <li class="col-md-2">
             <%= image_tag "openvoc_128.png", :size => "64x64" %>
             <div class="caption">
               <p><strong>Openvoc</strong>
               <%= link_to current_user.registration,
                 confirm: 'Are you sure you want to remove this authentication option?',
                 method: :delete do %>
-                  <i class="icon-remove"></i>
+                  <i class="glyphicon-remove"></i>
                 <% end %>
                 </p>
               </div>
               </li>
             <% end %>
             <% for authentication in @authentications %>
-            <li class="span2">
+            <li class="col-md-2">
             <%= provider_image(authentication.provider, 64) %>
             <div class="caption">
               <p>
               <strong><%= provider_name(authentication.provider) %>
               </strong>
               <%= link_to authentication, :confirm => 'Are you sure you want to remove this authentication option?', :method => :delete do %>
-                <i class="icon-remove"></i>
+                <i class="glyphicon-remove"></i>
               <% end %>
               </p>
             </div>
@@ -44,8 +44,8 @@
 <% end %>
 
 <div class="well">
-  <div class="row-fluid">
-    <div class="span2">
+  <div class="row">
+    <div class="col-md-2">
       <a href=<%= signed_in? ? new_registration_path : new_session_path %>
         class="auth_provider">
         <%= image_tag "openvoc_128.png", :size => "64x64", :alt => "Openvoc" %>
@@ -57,13 +57,13 @@
       @methods.prepend('developer')
     end %>
     <% @methods.each do |provider| %>
-      <div class="span2">
+      <div class="col-md-2">
         <%= link_to "/auth/#{provider}", class: "auth_provider" do %>
           <%= image_tag "#{provider}_64.png", size: "64x64",
             alt: provider_name(provider) %>
             <%= provider_name(provider) %>
         <% end %>
-      </div> 
+      </div>
     <% end %>
   </div>
 </div>
