--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,32 +1,34 @@
-<header class="navbar navbar-fixed-top">
-<!--<header class="navbar navbar-fixed-top navbar-inverse">-->
-<!-- navbar-inverse make it black -->
-<div class="navbar-inner">
+<header>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <!--<header class="navbar navbar-fixed-top navbar-inverse">-->
+  <!-- navbar-inverse make it black -->
   <div class="container">
 
-    <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-    <button class="btn btn-navbar"
-      data-toggle="collapse" data-target=".nav-collapse" type="button">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <%= link_to "Openvoc", root_path, class: "navbar-brand" %>
+    </div>
 
-    <%= link_to "Openvoc", root_path, class: "brand" %>
 
     <!-- Everything within here will be hidden at 940px or less -->
     <!-- Adding collapse class to nav make it open by default -->
-    <nav class="nav-collapse">
-      <ul class="nav">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
         <li <%= "class=active" if yield(:title) == "Languages" %>>
         <%= link_to "Languages", languages_path %></li>
         <li <%= "class=active" if yield(:title) == "New link" %>>
         <%= link_to "New link", new_link_path %></li>
       </ul>
-      <ul class="nav pull-right">
 
-      <% if current_user %>
-        <li id="fat-menu" class="dropdown">
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li id="fat-menu" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <%= current_user.name %> <b class="caret"></b>
         </a>
@@ -50,12 +52,12 @@
         </ul>
         </li>
       <% else %>
-        <li <%= "class=active" if yield(:title) == "Sign in" %>>
+          <li <%= "class=active" if yield(:title) == "Sign in" %>>
         <%= link_to "Sign in", signin_path %>
         </li>
       <% end %>
       </ul>
-    </nav>
+    </div>
   </div>
-</div>
+</nav>
 </header>
