--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -19,5 +19,5 @@
     <%= f.password_field(:new_password_confirmation) %>
   </fieldset>
   <br />
-  <%= f.submit "Save", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save", class: "btn btn-default btn-lg btn-primary" %>
 <% end %>
