--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
-<div class="hero-unit">
+<div class="jumbotron">
   <h1>Contact us!</h1>
   <p>
   You can reach us through our
