--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,5 +4,5 @@
   <%= f.label :name %>
   <%= f.text_field(:name) %>
   <br />
-  <%= f.submit "Save", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Save", class: "btn btn-default btn-lg btn-primary" %>
 <% end %>
