--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
-  <div class="span2">
+  <div class="col-md-2">
     <center>
       <%= gravatar_for @user %>
     </center>
   </div>
-  <div class="span7">
+  <div class="col-md-7">
     <table class="table table-bordered">
       <tr>
-        <th class="span2">Nom</th>
-        <td class="span4"><%= @user.name %></td></tr>
+        <th class="col-md-2">Nom</th>
+        <td class="col-md-4"><%= @user.name %></td></tr>
       <% if current_user?(@user) %>
         <tr style="background-color:#F1F1F1;">
           <th>Email</th>
