--- a/app/views/words/_select.html.erb
+++ b/app/views/words/_select.html.erb
@@ -1,2 +1,2 @@
 <%= f.label "word#{n}", "Word #{['from','to'][n-1]}" %>
-<%= f.text_field "word#{n}", value: word_content %>
+<%= f.text_field "word#{n}", class: 'form-control', value: word_content %>
