--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -51,6 +51,18 @@
       <%= form_for @new_list, url: path_to_create_list(@list) do |f| %>
         <%= f.label :name %>
         <%= f.text_field :name %>
+		<%= f.label :language_1 %>
+		<select name="language1_id" id="language1_id">
+			<% Language.all.each do |l|%>
+	  		 	<option value=<%=l.id%>> <%= l.name %></option>
+	    	<% end %>
+		</select>
+		<%= f.label :language_2 %>
+		<select name="language2_id" id="language2_id">
+			<% Language.all.each do |l|%>
+	  		 	<option value=<%=l.id%>> <%= l.name %></option>
+	    	<% end %>
+		</select>
         <br />
         <%= f.submit "Create list here", class: "btn btn-default" %>
       <% end %>
