--- a/app/views/meanings/_showshort.html.erb
+++ b/app/views/meanings/_showshort.html.erb
@@ -9,9 +9,9 @@ ERROR, no words are associated to this meaning. This meaning should be automatic
 	<% first = true %>
 	<% meaning.links.each do |link| %>
 		<% if link.word != withoutWord %>
-		 	<% if link.word.language == language %>
+		 	<% if (not language) || (link.word.language == language) %>
 				<% if !first %>
-					,
+						,
 				<% else first = false %>
 				<% end%>
   				<%= link_to link.word.content, link_path(link) %> (<%= link.word.language.name %>)
