--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'List editing') %>
 <h1><%= @path %></h1>
 
+<%= link_to "Back to list", list_path(@list), class: "btn btn-default btn-lg btn-primary"  %>
+
 <div class="col-md-12">
     <% unless @list.nil? %>
       <% if @wordsets.empty? %>
@@ -38,7 +40,7 @@
 	            	<tr>
 		        		<td><%= Word.find_by(id:w.word1_id).content %></td>
 		        		<td><%= Word.find_by(id:w.word2_id).content %></td>
-						<td><%= link_to "delete", wordset_path(w, {list_id: @list.id}), controller: :word_sets, method: :delete, params: {ws_id: w.id, list_id: @list.id} %></td>
+						<td><%= link_to "delete", wordset_path(w, {list_id: @list.id}), controller: :word_sets, method: :delete %></td>
 						<% if false%><td><%= links_to "Delete list", edit_list_path(@list)%></td> <%end%>
 		        	</tr>
 			    <% else @wordsWithoutMeaning = true end%>
