--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -92,6 +92,9 @@
 			  <tr>
 			    <th><%= @language1_name %></th>
 			    <th><%= @language2_name %></th>
+					<th>Asked</th>
+					<th>Succeeded</th>
+					<th>Success ratio (%)</th>
 			  </tr>
 			</thead>
 		    <tbody>
@@ -99,6 +102,10 @@
   	            <tr>
 		        	<td><%= Word.find_by(id:w.word1_id).content %></td>
 		        	<td><%= Word.find_by(id:w.word2_id).content %></td>
+							<td><%= w.asked %></td>
+							<td><%= w.success %></td>
+							<td><%= w.success_ratio.to_i %></td>
+							
 	  		    </tr>	
 		      <% end %>
 		    </tbody>
@@ -114,7 +121,8 @@
 	  <%= link_to "Delete list", edit_list_path(@list), class: "btn btn-default btn-lg btn-primary"  %>
     <% end %>
   </div>
-
+	
+	<% if false%>
   <% if not @list.nil? and @list.owner == current_user %>
     <div class="col-md-6">
       <h2>New links</h2>
@@ -126,4 +134,5 @@
       <%= render 'links/new' %>
     </div>
   <% end %>
+	<% end %>
 </div>
