--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -26,12 +26,16 @@
           <li>
           <%= link_to "Export", list_export_path(@list) %>
           </li>
+					<li> 
+					<%= link_to "Delete list", @list, method: :delete, data: {confirm: "You sure?"} %>
+					</li>
         <% end %>
         <% if @new_list.nil? %>
           <li>
           <%= link_to 'New list here', path_for_new_list(@list) %>
           </li>
         <% end %>
+				
       </ul>
     </div>
 
@@ -116,9 +120,7 @@
 	  
 	  <%= link_to "Edit list", edit_list_path(@list), class: "btn btn-default btn-lg btn-primary"  %>
 		
-    <%= render 'trains/new'%>
-		
-	  <%= link_to "Delete list", edit_list_path(@list), class: "btn btn-default btn-lg btn-primary"  %>
+		<%= link_to "Train", new_train_path(list_id:@list.id), class: "btn btn-default btn-lg btn-primary" %>
     <% end %>
   </div>
 	
