--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -7,6 +7,8 @@
   <% end %>
 </h1>
 
+<% if false%>
+
 <% if @guessTrue %>
 	<p>Yes! The translation of "<%= @previous_word1.content %>" is indeed "<%= @previous_word2.content %>"! Your success ratio for this wordset is : <%= @previous_ws.success_ratio.to_int %> %</p>
 	<p>Think you were wrong? Click <%= link_to("here", train_path(@train, modif_guess: {to: false, ws_id: @previous_ws_id}))%>.</p>
@@ -30,5 +32,34 @@
 <% end %>
 
 <% end%>
+
+<% end %>
+
+<!--Train fragments -->
+<% if @previous_frag %>
+<% if @prev_correct == true %>
+	<p>Yes! The translation of "<%= @prev_word1.content %>" is indeed "<%= @prev_answer %>" (Expected: "<%= @prev_word2.content %>")!</p>
+	<p>Think you were wrong? Click <%= link_to("here", train_path(@train, modif_guess: {to: false}))%>.</p>
+	
+<% else %>
+		<p>No! The translation of "<%= @prev_word1.content %>" was "<%= @prev_word2.content %>", not "<%= @prev_answer %>"! </p>
+		<p>Think you were right? Click <%= link_to("here", train_path(@train, modif_guess: {to: true}))%>.</p>
+<% end %>
+<% end %>
+
+
+
+<% if @train.finished? %>
+<p> <%= link_to("Finalize the train", train_summary_path(@train))%> </p>
+
+<% else %>
+<%= form_for(:guess, url: train_path(@train), method: :get)  do %>
+  <%= label_tag :translation, "What is the translation for #{@word1f.content}?" %>
+  <%= text_field_tag :translation %>
+  <%= submit_tag "Submit", class: "btn btn-default" %>
+<% end %>
+
+<% end%>
+
 
 <%= back_to_list %>
