--- a/app/views/trains/summary.html.erb
+++ b/app/views/trains/summary.html.erb
@@ -2,6 +2,8 @@
 <h1>Summary</h1>
 <p>Here is a summary of your training:</p>
 
+
+<% if false %>
 <p>Failed words:</p>
 <ul>
   <% @list_id_failed.each do |id| %>
@@ -19,6 +21,60 @@
     </li>
   <% end %>
 </ul>
+
+<% end %>
+
+
+<!-- Fragments -->
+
+<p>Failed words:</p>
+	<section class="col-md-12 table-responsive">
+	  <table class="table table-bordered table-striped table-condensed">
+	    <thead>
+		  <tr>
+		    <th>Asked</th>
+		    <th>Expected</th>
+				<th>Answer</th>
+				<th>Success ratio (%)</th>
+		  </tr>
+		  </thead>
+	    <tbody>
+  					<% @list_frag_failed.each do |f| %>
+	            <tr>
+	        			<td><%= Word.find(f.word1_id).content %></td>
+	        			<td><%= Word.find(f.word2_id).content %></td>
+								<td><%= f.answer %></td>
+								<td> 50 </td>
+  		        </tr>	
+	          <% end %>
+	    </tbody>
+	  </table>
+  </section>
+
+<p>Succeeded words:</p>
+	<section class="col-md-12 table-responsive">
+	  <table class="table table-bordered table-striped table-condensed">
+	    <thead>
+		  <tr>
+		    <th>Asked</th>
+		    <th>Expected</th>
+				<th>Answer</th>
+				<th>Success ratio (%)</th>
+		  </tr>
+		  </thead>
+	    <tbody>
+  					<% @list_frag_succeeded.each do |f| %>
+	            <tr>
+	        			<td><%= Word.find(f.word1_id).content %></td>
+	        			<td><%= Word.find(f.word2_id).content %></td>
+								<td><%= f.answer %></td>
+								<td> 50 </td>
+  		        </tr>	
+	          <% end %>
+	    </tbody>
+	  </table>
+  </section>
+
 
 
 <%= back_to_list %>
