--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
 <small>
 	<a href="http://openvoc.gp2mv3.com/">Openvoc</a>
-	by Benoît Legat
+	by Benoît Legat and Philippe Verbist
 </small>
 <nav>
 <ul>
