--- a/app/views/trains/new.html.erb
+++ b/app/views/trains/new.html.erb
@@ -13,12 +13,16 @@
 	<%= check_box_tag(:sub_lists) %>
 	
 	<br>
-	<%= label_tag(:ask_policy, "If I'm wrong:") %>
-	<%= select_tag(:ask_policy, options_for_select([['Ask just once', 1], ['Ask again until I know the word', 2]], 1)) %>
+	<%= label_tag(:error_policy, "If I'm wrong:") %>
+	<%= select_tag(:error_policy, options_for_select([['Ask just once', 1], ['Ask again until I know the word', 2]], 1)) %>
 	<br>
 	
 	<%= label_tag(:type_of_train, "Kind of test") %>
 	<%= select_tag(:type_of_train, options_for_select([['Fill-in', 1], ['Multiple choice', 2]], 1)) %>
+	<br>
+	
+	<%= label_tag(:q_to_a, "What to ask") %>
+	<%= select_tag(:q_to_a, options_for_select([["#{@lang1} -> #{@lang2}", 1], ["#{@lang1} <- #{@lang2}", 2], ["#{@lang1} <-> #{@lang2}", 3]], 1)) %>
 	<br>
 	
   <%= f.submit "Let's train!", class: "btn btn-default" %>
