--- a/app/views/trains/new.html.erb
+++ b/app/views/trains/new.html.erb
@@ -8,21 +8,20 @@
 	<%= f.hidden_field :rec, value: 0 %>
 	<%= f.hidden_field :list_id, value:params[:list_id] %>
 	<br>
-	<%= hidden_field_tag :sub_lists, 0 %>
-	<%= label_tag(:sub_lists, "Ask words in the sub-lists") %>
-	<%= check_box_tag(:sub_lists) %>
+	<%= f.label(:include_sub_lists, "Ask words in the sub-lists") %>
+	<%= f.check_box(:include_sub_lists) %>
 	
 	<br>
-	<%= label_tag(:error_policy, "If I'm wrong:") %>
-	<%= select_tag(:error_policy, options_for_select([['Ask just once', 1], ['Ask again until I know the word', 2]], 1)) %>
+	<%= f.label(:error_policy, "If I'm wrong:") %>
+	<%= f.select(:error_policy, options_for_select([['Ask just once', 1], ['Ask again until I know the word', 2]], 2)) %>
 	<br>
 	
-	<%= label_tag(:type_of_train, "Kind of test") %>
-	<%= select_tag(:type_of_train, options_for_select([['Fill-in', 1], ['Multiple choice', 2]], 1)) %>
+	<%= f.label(:type_of_train, "Kind of test") %>
+	<%= f.select(:type_of_train, options_for_select([['Fill-in', 1], ['Multiple choice', 2]], 1)) %>
 	<br>
 	
-	<%= label_tag(:q_to_a, "What to ask") %>
-	<%= select_tag(:q_to_a, options_for_select([["#{@lang1} -> #{@lang2}", 1], ["#{@lang1} <- #{@lang2}", 2], ["#{@lang1} <-> #{@lang2}", 3]], 1)) %>
+	<%= f.label(:q_to_a, "What to ask") %>
+	<%= f.select(:q_to_a, options_for_select([["#{@lang1} -> #{@lang2}", 1], ["#{@lang1} <- #{@lang2}", 2], ["#{@lang1} <-> #{@lang2}", 3]], 1)) %>
 	<br>
 	
   <%= f.submit "Let's train!", class: "btn btn-default" %>
