--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -12,38 +12,39 @@
 		  <table class="table table-bordered table-striped table-condensed">
 		    <thead>
 			  <tr>
-			    <th><select id="select" class="form-control">
-					<% @languages.each do |l|%>         <!--  #TODO gérer le changement de langue -->
-						<% if @list.language1_id == l.id %>
-      			  		 <option selected> <%= l.name %></option>
-						<% else%>
-     			  		 <option> <%= l.name %></option>
-						<% end %>
-      			    <% end %>
-                    </select>
-				</th>
-			    <th><select id="select" class="form-control">
-					<% @languages.each do |l|%>
-						<% if @list.language2_id == l.id %>
-      			  		 <option selected> <%= l.name %></option>
-						<% else%>
-     			  		 <option> <%= l.name %></option>
-						<% end %>
-      			    <% end %>
-                    </select>
-				</th>
+			    <th>
+						<select id="select" class="form-control">
+							<% @languages.each do |l|%>         <!--  #TODO gérer le changement de langue -->
+								<% if @list.language1_id == l.id %>
+		      			  <option selected> <%= l.name %></option>
+								<% else%>
+		     			    <option> <%= l.name %></option>
+								<% end %>
+		      		<% end %>
+            </select>
+				  </th>
+			    <th>
+						<select id="select" class="form-control">
+							<% @languages.each do |l|%>
+								<% if @list.language2_id == l.id %>
+		      			  <option selected> <%= l.name %></option>
+								<% else%>
+		     			    <option> <%= l.name %></option>
+								<% end %>
+		      		<% end %>
+            </select>
+				  </th>
 			  </tr>
 			</thead>
 		    <tbody>
 			  <% @wordsets.each do |w| %>
 			  	<% if w.meaning1_id && w.meaning2_id %>
-	            	<tr>
-		        		<td><%= Word.find_by(id:w.word1_id).content %></td>
-		        		<td><%= Word.find_by(id:w.word2_id).content %></td>
-						    <td><%= link_to "delete", wordset_path(w, {list_id: @list.id}), 
+	          <tr>
+		          <td><%= Word.find_by(id:w.word1_id).content %></td>
+		        	<td><%= Word.find_by(id:w.word2_id).content %></td>
+						  <td><%= link_to "delete", wordset_path(w, {list_id: @list.id}), 
 										controller: :word_sets, method: :delete %></td>
-					<% if false%><td><%= links_to "Delete list", edit_list_path(@list)%></td> <%end%> <!-- TODO -->
-		        	</tr>
+		        </tr>
 			    <% else @wordsWithoutMeaning = true end%>
 			  <% end %>
 		    </tbody>
